Make properties in Qt Quick Controls FINAL

Without setting the FINAL flag, properties can be shadowed by
users.
This can both cause confusion for non-experienced users, and it
causes issues with qmlsc.

[ChangeLog][Important Behavior Changes][Controls][SplitView] The
resizing property is now FINAL, meaning that it can no longer be
shadowed by user declared properties.

Task-number: QTBUG-108739
Change-Id: Ie5a223d28a135ff55b3f8861f0ac257ba5bbe0eb
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>